# eviloauth

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python_formatting.yml
evil-oauth/: __init__.py  app.py  main.py  routes.py  token_utilities.py
evil-oauth/module/: __init__.py
evil-oauth/module/azure/: __init__.py  read_mail.py
evil-oauth/modules/: __init__.py
evil-oauth/modules/azure/: __init__.py  read.mail.py
evil-oauth/static/: app.js  redirect.js
evil-oauth/templates/: index.html  redirect.html
evil_oauth/: app.py
eviloauth/: __init__.py  __main__.py  access_token.py  dispatcher.py  exceptions.py  general_token.py  idp.py  refresh_token.py  routes.py
eviloauth/module/azure/: __init__.py  read_mail.py
eviloauth/modules/: __init__.py
eviloauth/static/: app.js  redirect.js
eviloauth/templates/: index.html  redirect.html
scripts/azure/: read.mail.py
src/: __init__.py  app.py  routes.py  token_utilities.py
static/: redirect.js
tests/: test_flask.py  test_idp.py  test_selenium.py
