[tool.poetry]
name = "eviloauth"
version = "0.1.0"
description = ""
authors = ["Chris Powell <chris@fmlyc.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
flask = "^3.0.0"
pytest = "^7.4.3"
diskcache = "^5.6.3"
prompt-toolkit = "^3.0.43"
pyjwt = "^2.8.0"
cryptography = "^41.0.7"
html2text = "^2020.1.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eviloauth = "eviloauth.__main__:main"
